<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="start">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/menuItemTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="135dp"
            android:text="@string/add_menu_item"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/addMenuItemBtn"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:text="@string/add_new_menu_item" />

        <EditText
            android:id="@+id/newMenuItemTxt"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/new_menu_item_hint"
            android:inputType="text"
            android:textColor="@android:color/holo_green_light" />

    </LinearLayout>

    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="340dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/darker_gray"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"></ListView>

</androidx.drawerlayout.widget.DrawerLayout>
